<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>initial_test</name>
  <version>0.0.0</version>
  <description>Simple publisher and subscriber to send floating point control and plant signals</description>
  <maintainer email="84cremebrule@gmail.com">cremebrule</maintainer>
  <license>TODO: License declaration</license>
  <author>Josiah Wong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>test_messages</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>test_messages</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
